--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -5,26 +5,19 @@ height: 897
 panel_pos: 577
 run_command_line: ruby vr
 open_files:
+- "/home/eric/vrp/vr3/bin/main/RubygemsAPI.rb"
+- "/home/eric/vrp/vr3/bin/main/NewProjectGUI.rb"
+- "/home/eric/vrp/vr3/bin/editor/VR_Tabs.rb"
+- "/home/eric/vrp/vr3/bin/editor/VR_TextShell.rb"
 - "/home/eric/vrp/vr3/vr"
-- "/home/eric/vrp/vr3/bin/main/VR_ENV_GLOBAL.rb"
-- "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
-- "/home/eric/vrp/vr3/bin/main/VR_File_Tree.rb"
-- "/home/eric/vrp/vr3/visualruby_examples/listview/bin/SongListView.rb"
-- "/home/eric/vrp/vr3/visualruby_examples/listview_objects/bin/ListViewObjectsGUI.rb"
-- "/home/eric/vrp/vr3/visualruby_examples/filetreeview/bin/MyClass.rb"
-- "/home/eric/vrp/vr3/bin/main/VR_ENV.rb"
-- "/home/eric/vrp/vr3/visualruby_examples/all_widgets/main.rb"
-- "/home/eric/vrp/vr3/visualruby_examples/calculator/main.rb"
-- "/home/eric/vrp/vr3/visualruby_examples/child_window/main.rb"
-- "/home/eric/vrp/vr3/visualruby_examples/drag_drop/main.rb"
-- "/home/eric/vrp/vr3/visualruby_examples/filetreeview/main.rb"
-- "/home/eric/vrp/vr3/visualruby_examples/listview/main.rb"
-- "/home/eric/vrp/vr3/visualruby_examples/listview_objects/main.rb"
+- "/home/eric/vrp/vr3/bin/tools/VR_Tools.rb"
+- "/home/eric/vrp/vr3/vr.gemspec"
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/bin"
 - "/home/eric/vrp/vr3/bin/editor"
 - "/home/eric/vrp/vr3/bin/main"
-current_file: "/home/eric/vrp/vr3/visualruby_examples/listview_objects/main.rb"
+- "/home/eric/vrp/vr3/bin/main/glade"
+current_file: "/home/eric/vrp/vr3/vr.gemspec"
 rdoc_command_line: rdoc -x *.glade
 builder: !ruby/object:Gtk::Builder {}
