--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -2,19 +2,10 @@
 settings_file_version: 1
 width: 1491
 height: 724
-panel_pos: 442
+panel_pos: 468
 run_command_line: 'ruby vr '
 open_files:
-- "/home/eric/vrp/vr3/bin/editor/VR_Document.rb"
-- "/home/eric/vrp/vr3/bin/main/VR_ENV.rb"
-- "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
-- "/home/eric/vrp/vr3/vrlib/lib/GladeGUI.rb"
-- "/home/eric/vrp/vr3/bin/editor/VR_TextViewCommon.rb"
-- "/home/eric/vrp/vr3/vrlib/lib/Dialog.rb"
-- "/home/eric/vrp/vr3/bin/editor/VR_TextShell.rb"
-- "/home/eric/vrp/vr3/bin/editor/VR_TabSearch.rb"
-- "/home/eric/vrp/vr3/bin/editor/VR_Tabs.rb"
-- "/home/eric/vrp/vr3/vr"
+- "/home/eric/vrp/vr3/Untitled"
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/bin"
@@ -24,7 +15,7 @@ open_folders:
 - "/home/eric/vrp/vr3/skeleton"
 - "/home/eric/vrp/vr3/vrlib"
 - "/home/eric/vrp/vr3/vrlib/lib"
-current_file: "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
+current_file: "/home/eric/vrp/vr3/Untitled"
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
