--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -5,17 +5,22 @@ height: 724
 panel_pos: 468
 run_command_line: 'ruby vr '
 open_files:
-- "/home/eric/vrp/vr3/Untitled"
+- "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
+- "/home/eric/vrp/vr3/vr"
+- "/home/eric/vrp/vr3/vrlib/lib/Alert.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/GladeGUI.rb"
+- "/home/eric/vrp/vr3/bin/main/ProjectChooserGUI.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/Dialog.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/treeview/ViewCommon.rb"
+- "/home/eric/vrp/vr3/bin/main/VR_File_Tree.rb"
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/bin"
-- "/home/eric/vrp/vr3/bin/editor"
 - "/home/eric/vrp/vr3/bin/main"
-- "/home/eric/vrp/vr3/bin/main/glade"
 - "/home/eric/vrp/vr3/skeleton"
 - "/home/eric/vrp/vr3/vrlib"
 - "/home/eric/vrp/vr3/vrlib/lib"
-current_file: "/home/eric/vrp/vr3/Untitled"
+current_file: "/home/eric/vrp/vr3/vrlib/lib/Alert.rb"
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
