--- a/project_settings.yaml
+++ b/project_settings.yaml
@@ -9,14 +9,15 @@ open_files:
 - "/home/eric/vrp/vr3/vr"
 - "/home/eric/vrp/vr3/vrlib/lib/Dialog.rb"
 - "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
+- "/home/eric/vrp/vr3/bin/editor/VR_Document.rb"
+- "/home/eric/vrp/vr3/bin/main/ProjectChooserGUI.rb"
+- "/home/eric/vrp/vr3/bin/main/VR_File_Tree.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/Alert.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/treeview/ViewCommon.rb"
 open_folders:
 - "/home/eric/vrp/vr3"
-- "/home/eric/vrp/vr3/bin"
-- "/home/eric/vrp/vr3/bin/main"
-- "/home/eric/vrp/vr3/vrlib"
-- "/home/eric/vrp/vr3/vrlib/lib"
-current_file: "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
-current_line: 312
+current_file: "/home/eric/vrp/vr3/bin/main/VR_File_Tree.rb"
+current_line: 123
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
