--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -1,28 +1,28 @@
 --- !ruby/object:VR_ENV
-settings_file_version: 1
-width: 1491
-height: 724
-panel_pos: 468
-run_command_line: 'ruby vr '
+filename: ".vr_settings.yaml"
+width: 1325
+height: 673
+panel_pos: 273
+notebook_panel_position: 400
+run_command_line: ruby vr
 open_files:
-- "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
-- "/home/eric/vrp/vr3/vr"
-- "/home/eric/vrp/vr3/vrlib/lib/Alert.rb"
-- "/home/eric/vrp/vr3/vrlib/lib/GladeGUI.rb"
-- "/home/eric/vrp/vr3/bin/main/ProjectChooserGUI.rb"
-- "/home/eric/vrp/vr3/vrlib/lib/Dialog.rb"
-- "/home/eric/vrp/vr3/vrlib/lib/treeview/ViewCommon.rb"
+- "/home/eric/vrp/vr3/bin/editor/VR_Document.rb"
+- "/home/eric/vrp/vr3/bin/main/VR_ENV.rb"
 - "/home/eric/vrp/vr3/bin/main/VR_File_Tree.rb"
+- "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
+- "/home/eric/vrp/vr3/bin/tools/VR_Tools.rb"
+- "/home/eric/vrp/vr3/bin/editor/VR_TextShell.rb"
+- "/home/eric/vrp/vr3/bin/editor/VR_TextViewCommon.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/Alert.rb"
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/bin"
 - "/home/eric/vrp/vr3/bin/main"
-- "/home/eric/vrp/vr3/skeleton"
+- "/home/eric/vrp/vr3/bin/main/glade"
 - "/home/eric/vrp/vr3/vrlib"
 - "/home/eric/vrp/vr3/vrlib/lib"
 current_file: "/home/eric/vrp/vr3/vrlib/lib/Alert.rb"
+current_line: 84
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
-filename: ".vr_settings.yaml"
-notebook_panel_position: 507
