--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -1,12 +1,14 @@
 --- !ruby/object:VR_ENV
-width: 1095
+width: 1351
 height: 600
 panel_pos: 360
-run_command_line: ruby main.rb
+run_command_line: ruby vr
 open_files:
 - "/home/eric/vrp/vr3/vrlib/lib/SavableClass.rb"
 - "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
 - "/home/eric/vrp/vr3/bin/main/VR_ENV.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/Alert.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/GladeGUI.rb"
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/bin"
@@ -14,9 +16,13 @@ open_folders:
 - "/home/eric/vrp/vr3/bin/tools"
 - "/home/eric/vrp/vr3/vrlib"
 - "/home/eric/vrp/vr3/vrlib/lib"
-current_file: "/home/eric/vrp/vr3/bin/main/VR_ENV.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/glade"
+- "/home/eric/vrp/vr3/vrlib/site"
+current_file: "/home/eric/vrp/vr3/vrlib/lib/Alert.rb"
 rdoc_command_line: rdoc -x README
 settings_file_version: 1
 filename: ".vr_settings.yaml"
-notebook_panel_position: 400
-current_line: -1
+notebook_panel_position: 306
+current_line: 66
+builder: !ruby/object:Gtk::Builder {}
+top_level_window: false
