--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -9,6 +9,10 @@ open_files:
 - "/home/eric/vrp/vr3/bin/main/VR_ENV.rb"
 - "/home/eric/vrp/vr3/vrlib/lib/Alert.rb"
 - "/home/eric/vrp/vr3/vrlib/lib/GladeGUI.rb"
+- "/home/eric/vrp/vr3/bin/editor/VR_Tabs.rb"
+- "/home/eric/vrp/vr3/bin/editor/VR_TabSearch.rb"
+- "/home/eric/vrp/vr3/bin/editor/VR_TextShell.rb"
+- "/home/eric/vrp/vr3/bin/editor/VR_Document.rb"
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/bin"
@@ -18,11 +22,11 @@ open_folders:
 - "/home/eric/vrp/vr3/vrlib/lib"
 - "/home/eric/vrp/vr3/vrlib/lib/glade"
 - "/home/eric/vrp/vr3/vrlib/site"
-current_file: "/home/eric/vrp/vr3/vrlib/lib/Alert.rb"
+current_file: "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
 rdoc_command_line: rdoc -x README
 settings_file_version: 1
 filename: ".vr_settings.yaml"
 notebook_panel_position: 306
-current_line: 66
+current_line: 256
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
