--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -1,5 +1,5 @@
 --- !ruby/object:VR_ENV
-width: 1673
+width: 1449
 height: 847
 panel_pos: 360
 run_command_line: ruby vr
@@ -10,13 +10,20 @@ open_files:
 - "/home/eric/vrp/vr3/bin/main/VR_File_Tree.rb"
 - "/home/eric/vrp/vr3/vrlib/lib/treeview/FileTreeView.rb"
 - "/home/eric/vrp/vr3/vrlib/lib/treeview/ViewCommon.rb"
+- "/home/eric/vrp/vr3/README.md"
+- "/home/eric/vrp/vr3/vrlib/README"
+- "/home/eric/vrp/vr3/bin/tools/VR_Tools.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/GladeGUI.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/Alert.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/Dialog.rb"
 open_folders:
 - "/home/eric/vrp/vr3"
-current_file: "/home/eric/vrp/vr3/bin/main/VR_File_Tree.rb"
+- "/home/eric/vrp/vr3/vrlib"
+current_file: "/home/eric/vrp/vr3/vrlib/lib/Dialog.rb"
 rdoc_command_line: rdoc -x README
 settings_file_version: 1
 filename: ".vr_settings.yaml"
 notebook_panel_position: 565
-current_line: 104
+current_line: 74
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
