--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -17,6 +17,7 @@ open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/bin"
 - "/home/eric/vrp/vr3/bin/main"
+- "/home/eric/vrp/vr3/bin/main/glade"
 - "/home/eric/vrp/vr3/img"
 - "/home/eric/vrp/vr3/vrlib"
 - "/home/eric/vrp/vr3/vrlib/lib"
