--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -1,7 +1,7 @@
 --- !ruby/object:VR_ENV
-width: 1351
-height: 600
-panel_pos: 360
+width: 1366
+height: 692
+panel_pos: 531
 run_command_line: ruby vr
 open_files:
 - "/home/eric/vrp/vr3/vrlib/lib/Dialog.rb"
@@ -14,6 +14,9 @@ open_files:
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/bin"
+- "/home/eric/vrp/vr3/bin/editor"
+- "/home/eric/vrp/vr3/bin/editor/glade"
+- "/home/eric/vrp/vr3/bin/main"
 - "/home/eric/vrp/vr3/bin/tools"
 - "/home/eric/vrp/vr3/img"
 - "/home/eric/vrp/vr3/vrlib"
@@ -21,7 +24,7 @@ open_folders:
 - "/home/eric/vrp/vr3/vrlib/lib/glade"
 - "/home/eric/vrp/vr3/vrlib/lib/treeview"
 - "/home/eric/vrp/vr3/vrlib/site"
-current_file: "/home/eric/vrp/vr3/bin/editor/VR_Document.rb"
+current_file: "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
 rdoc_command_line: rdoc -x README
 settings_file_version: 1
 filename: ".vr_settings.yaml"
