--- a/examples/active_record2/.vr_settings.yaml
+++ b/examples/active_record2/.vr_settings.yaml
@@ -1,16 +1,16 @@
 --- !ruby/object:VR_ENV
-current_file: /home/eric/vrp/vrx/visualruby_examples/active_record2/main.rb
-height: 718
-open_files:
-- /home/eric/vrp/vrx/visualruby_examples/active_record2/main.rb
-- /home/eric/vrp/vrx/visualruby_examples/active_record2/bin/CompanyGUI.rb
-- /home/eric/vrp/vrx/visualruby_examples/active_record2/bin/Employee.rb
-open_folders:
-- /home/eric/vrp/vrx/visualruby_examples/active_record2
-- /home/eric/vrp/vrx/visualruby_examples/active_record2/bin
-panel_pos: 360
-rdoc_command_line: rdoc -x README
-run_command_line: ruby main.rb
 width: 1641
+height: 718
+panel_pos: 360
+run_command_line: ruby main.rb
+open_files:
+- "/home/eric/vrp/vr3/examples/active_record/Untitled"
+open_folders:
+- "/home/eric/vrp/vr3/examples/active_record2"
+current_file: "/home/eric/vrp/vr3/examples/active_record/Untitled"
+rdoc_command_line: rdoc -x README
 settings_file_version: 1
+filename: ".vr_settings.yaml"
+notebook_panel_position: 400
+current_line: -1
 builder: !ruby/object:Gtk::Builder {}
