--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -1,21 +1,22 @@
 --- !ruby/object:VR_ENV
-width: 1419
-height: 704
-panel_pos: 277
+width: 1364
+height: 691
+panel_pos: 267
 run_command_line: ruby vr
 open_files:
 - "/home/eric/vrp/vr3/bin/main/GemTree.rb"
-- "/home/eric/vrp/vr3/bin/tools/VR_Tools.rb"
 - "/home/eric/vrp/vr3/bin/main/VR_File_Tree.rb"
-- "/home/eric/vrp/vr3/vrlib/vrlib.gemspec"
+- "/home/eric/vrp/vr3/vr.gemspec"
+- "/home/eric/vrp/vr3/vrlib/lib/treeview/IterMethods.rb"
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/vrlib"
-current_file: "/home/eric/vrp/vr3/bin/main/VR_File_Tree.rb"
+- "/home/eric/vrp/vr3/vrlib/lib"
+current_file: "/home/eric/vrp/vr3/vr.gemspec"
 rdoc_command_line: rdoc -x README
 settings_file_version: 1
 filename: ".vr_settings.yaml"
-notebook_panel_position: 334
-current_line: 61
+notebook_panel_position: 482
+current_line: 46
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
