--- a/examples/drag_drop/.vr_settings.yaml
+++ b/examples/drag_drop/.vr_settings.yaml
@@ -1,16 +1,15 @@
 --- !ruby/object:VR_ENV
-settings_file_version: 1
 width: 1307
 height: 698
 panel_pos: 423
+notebook_panel_position: 400
 run_command_line: ruby main.rb
 open_files:
-- "/home/eric/vrp/vr3/visualruby_examples/drag_drop/bin/DragDropDemo.rb"
-- "/home/eric/vrp/vr3/visualruby_examples/drag_drop/main.rb"
+- "/home/eric/vrp/vr3/examples/listview_objects/Untitled"
 open_folders:
-- "/home/eric/vrp/vr3/visualruby_examples/drag_drop"
-- "/home/eric/vrp/vr3/visualruby_examples/drag_drop/bin"
-- "/home/eric/vrp/vr3/visualruby_examples/drag_drop/bin/glade"
-- "/home/eric/vrp/vr3/visualruby_examples/drag_drop/img"
-current_file: "/home/eric/vrp/vr3/visualruby_examples/drag_drop/bin/DragDropDemo.rb"
+- "/home/eric/vrp/vr3/examples/drag_drop"
+current_file: "/home/eric/vrp/vr3/examples/listview_objects/Untitled"
+current_line: -1
 rdoc_command_line: rdoc -x README
+vr_yaml_file: ".vr_settings.yaml"
+settings_file_version: 1
