--- a/examples/active_record/.vr_settings.yaml
+++ b/examples/active_record/.vr_settings.yaml
@@ -1,18 +1,22 @@
 --- !ruby/object:VR_ENV
+vr_yaml_file: ".vr_settings.yaml"
 width: 1139
-height: 737
+height: 691
 panel_pos: 453
+notebook_panel_position: 400
 run_command_line: ruby active_record.rb
 open_files:
-- "/home/eric/vrp/vr3/Untitled"
+- "/home/eric/vrp/vr3/examples/active_record/bin/Person.rb"
 open_folders:
 - "/home/eric/vrp/vr3/examples/active_record"
-current_file: "/home/eric/vrp/vr3/Untitled"
+- "/home/eric/vrp/vr3/examples/active_record/bin"
+- "/home/eric/vrp/vr3/examples/active_record/bin/glade"
+- "/home/eric/vrp/vr3/examples/active_record/db"
+current_file: "/home/eric/vrp/vr3/examples/active_record/bin/Person.rb"
+current_line: 12
 rdoc_command_line: rdoc -x README
-filename: ".vr_settings.yaml"
-notebook_panel_position: 400
-current_line: -1
 builder: !ruby/object:Gtk::Builder {}
+filename: ".vr_settings.yaml"
 backup_path: "/home/eric"
 browser: firefox
 font_name: Monospace 10
