--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -1,19 +1,29 @@
 --- !ruby/object:VR_ENV
 vr_yaml_file: ".vr_settings.yaml"
-width: 1014
-height: 636
+width: 1250
+height: 692
 panel_pos: 278
 notebook_panel_position: 437
 run_command_line: ruby vr
 open_files:
-- "/home/eric/vrp/vr3/Untitled"
+- "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
+- "/home/eric/vrp/vr3/bin/main/VR_ENV_GLOBAL.rb"
+- "/home/eric/vrp/vr3/bin/editor/VR_Document.rb"
+- "/home/eric/vrp/vr3/bin/tools/VR_Tools.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/Alert.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/treeview/columns/ProgressCol.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/SavableClass.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/IconHash.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/DragDrop.rb"
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/bin"
 - "/home/eric/vrp/vr3/bin/main"
 - "/home/eric/vrp/vr3/bin/main/glade"
-current_file: "/home/eric/vrp/vr3/Untitled"
-current_line: -1
+- "/home/eric/vrp/vr3/vrlib"
+- "/home/eric/vrp/vr3/vrlib/lib"
+current_file: "/home/eric/vrp/vr3/vrlib/lib/DragDrop.rb"
+current_line: 88
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
