--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -1,9 +1,9 @@
 --- !ruby/object:VR_ENV
 vr_yaml_file: ".vr_settings.yaml"
 width: 1250
-height: 691
+height: 687
 panel_pos: 270
-notebook_panel_position: 437
+notebook_panel_position: 474
 run_command_line: ruby vr
 open_files:
 - "/home/eric/vrp/vr3/bin/editor/VR_Tabs.rb"
@@ -11,15 +11,22 @@ open_files:
 - "/home/eric/vrp/vr3/bin/editor/VR_TextViewCommon.rb"
 - "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
 - "/home/eric/vrp/vr3/bin/editor/VR_TabSearch.rb"
+- "/home/eric/vrp/vr3/bin/editor/VR_Document.rb"
+- "/home/eric/vrp/vr3/bin/main/OpenProject.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/GladeGUI.rb"
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/bin"
 - "/home/eric/vrp/vr3/bin/editor"
 - "/home/eric/vrp/vr3/bin/main"
+- "/home/eric/vrp/vr3/bin/main/glade"
+- "/home/eric/vrp/vr3/skeleton"
+- "/home/eric/vrp/vr3/skeleton/document"
 - "/home/eric/vrp/vr3/vrlib"
 - "/home/eric/vrp/vr3/vrlib/lib"
-current_file: "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
-current_line: 293
+- "/home/eric/vrp/vr3/vrlib/lib/treeview"
+current_file: "/home/eric/vrp/vr3/bin/editor/VR_Tabs.rb"
+current_line: 105
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
