--- a/examples/child_window/.vr_settings.yaml
+++ b/examples/child_window/.vr_settings.yaml
@@ -1,8 +1,9 @@
 --- !ruby/object:VR_ENV
-settings_file_version: 1
+vr_yaml_file: ".vr_settings.yaml"
 width: 1084
-height: 754
+height: 691
 panel_pos: 437
+notebook_panel_position: 400
 run_command_line: ruby main.rb
 open_files:
 - "/home/eric/vrp/vr3/examples/child_window/main.rb"
@@ -15,4 +16,6 @@ open_folders:
 - "/home/eric/vrp/vr3/examples/child_window/bin"
 - "/home/eric/vrp/vr3/examples/child_window/bin/glade"
 current_file: "/home/eric/vrp/vr3/examples/child_window/bin/ChildWindowDemo.rb"
+current_line: 1
 rdoc_command_line: rdoc -x README
+settings_file_version: 1
