--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -2,30 +2,23 @@
 vr_yaml_file: ".vr_settings.yaml"
 width: 1250
 height: 687
-panel_pos: 270
+panel_pos: 268
 notebook_panel_position: 474
 run_command_line: ruby vr
 open_files:
-- "/home/eric/vrp/vr3/bin/editor/VR_Tabs.rb"
-- "/home/eric/vrp/vr3/bin/editor/VR_TextShell.rb"
-- "/home/eric/vrp/vr3/bin/editor/VR_TextViewCommon.rb"
-- "/home/eric/vrp/vr3/bin/editor/VR_TabSearch.rb"
-- "/home/eric/vrp/vr3/bin/editor/VR_Document.rb"
+- "/home/eric/vrp/vr3/vr"
+- "/home/eric/vrp/vr3/bin/tools/VR_Tools.rb"
 - "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
-- "/home/eric/vrp/vr3/bin/main/RubygemsAPI.rb"
-- "/home/eric/vrp/vr3/bin/main/VR_File_Tree.rb"
+- "/home/eric/vrp/vr3/bin/main/VR_ENV.rb"
+- "/home/eric/vrp/vr3/bin/main/VR_ENV_GLOBAL.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/GladeGUI.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/treeview/ListView.rb"
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/bin"
-- "/home/eric/vrp/vr3/bin/editor"
 - "/home/eric/vrp/vr3/bin/main"
-- "/home/eric/vrp/vr3/bin/tools"
-- "/home/eric/vrp/vr3/skeleton"
-- "/home/eric/vrp/vr3/skeleton/document"
-- "/home/eric/vrp/vr3/vrlib"
-- "/home/eric/vrp/vr3/vrlib/lib"
-current_file: "/home/eric/vrp/vr3/bin/main/VR_File_Tree.rb"
-current_line: 79
+current_file: "/home/eric/vrp/vr3/vrlib/lib/treeview/ListView.rb"
+current_line: 60
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
