--- a/examples/active_record/.vr_settings.yaml
+++ b/examples/active_record/.vr_settings.yaml
@@ -7,13 +7,14 @@ notebook_panel_position: 400
 run_command_line: ruby active_record.rb
 open_files:
 - "/home/eric/vrp/vr3/examples/active_record/bin/Person.rb"
+- "/home/eric/vrp/vr3/examples/active_record/bin/ChoosePerson.rb"
+- "/home/eric/vrp/vr3/examples/active_record/active_record.rb"
 open_folders:
 - "/home/eric/vrp/vr3/examples/active_record"
 - "/home/eric/vrp/vr3/examples/active_record/bin"
 - "/home/eric/vrp/vr3/examples/active_record/bin/glade"
-- "/home/eric/vrp/vr3/examples/active_record/db"
-current_file: "/home/eric/vrp/vr3/examples/active_record/bin/Person.rb"
-current_line: 12
+current_file: "/home/eric/vrp/vr3/examples/active_record/active_record.rb"
+current_line: 6
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 filename: ".vr_settings.yaml"
