--- a/examples/settings_file/settings.yaml
+++ b/examples/settings_file/settings.yaml
@@ -1,11 +1,15 @@
 --- !ruby/object:SavableSettings
-height: 419
-width: 450
+height: 415
+width: 765
 title: Savable Settings Demo
-text: Try changing the window size, title and text in this window.  You will see that
-  it saves its state to a file named settings.yaml.  So when you run this program
-  again, it will be the same as when you left.  To see this file, click the 'Refresh'
-  button. To reset to defaults, just delete settings.yaml.
+text: |-
+  Try running this program multiple times.
+
+  It will create a file named settings.yaml that stores the height, width, title, and text from this window, so the window will be restored to the same state as when you exited.
+
+   If you want to reset the file to the defaults, just delete the settings.yamls file.
+
+  You may need to click the 'Refresh' to see the settings.yaml file.
 vr_yaml_file: settings.yaml
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
