--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -6,19 +6,19 @@ panel_pos: 268
 notebook_panel_position: 474
 run_command_line: ruby vr
 open_files:
+- "/home/eric/vrp/vr3/vr.gemspec"
+- "/home/eric/vrp/vr3/bin/main/VR_File_Tree.rb"
 - "/home/eric/vrp/vr3/vr"
-- "/home/eric/vrp/vr3/bin/tools/VR_Tools.rb"
-- "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
-- "/home/eric/vrp/vr3/bin/main/VR_ENV.rb"
-- "/home/eric/vrp/vr3/bin/main/VR_ENV_GLOBAL.rb"
 - "/home/eric/vrp/vr3/vrlib/lib/GladeGUI.rb"
-- "/home/eric/vrp/vr3/vrlib/lib/treeview/ListView.rb"
+- "/home/eric/vrp/vr3/bin/main/RubygemsAPI.rb"
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/bin"
 - "/home/eric/vrp/vr3/bin/main"
-current_file: "/home/eric/vrp/vr3/vrlib/lib/treeview/ListView.rb"
-current_line: 60
+- "/home/eric/vrp/vr3/vrlib"
+- "/home/eric/vrp/vr3/vrlib/lib"
+current_file: "/home/eric/vrp/vr3/bin/main/RubygemsAPI.rb"
+current_line: 97
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
