--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -1,8 +1,8 @@
 --- !ruby/object:VR_ENV
 vr_yaml_file: ".vr_settings.yaml"
-width: 1250
-height: 687
-panel_pos: 268
+width: 1364
+height: 691
+panel_pos: 270
 notebook_panel_position: 474
 run_command_line: ruby vr
 open_files:
@@ -11,14 +11,16 @@ open_files:
 - "/home/eric/vrp/vr3/vr"
 - "/home/eric/vrp/vr3/vrlib/lib/GladeGUI.rb"
 - "/home/eric/vrp/vr3/bin/main/RubygemsAPI.rb"
+- "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
+- "/home/eric/vrp/vr3/bin/main/VR_Remote_Gem_Tree.rb"
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/bin"
 - "/home/eric/vrp/vr3/bin/main"
 - "/home/eric/vrp/vr3/vrlib"
 - "/home/eric/vrp/vr3/vrlib/lib"
-current_file: "/home/eric/vrp/vr3/bin/main/RubygemsAPI.rb"
-current_line: 80
+current_file: "/home/eric/vrp/vr3/bin/main/VR_Remote_Gem_Tree.rb"
+current_line: 58
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
