--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -7,14 +7,14 @@ notebook_panel_position: 474
 run_command_line: ruby vr
 open_files:
 - "/home/eric/vrp/vr3/vrlib/lib/IconHash.rb"
+- "/home/eric/vrp/vr3/vrlib/index"
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/bin"
 - "/home/eric/vrp/vr3/bin/main"
 - "/home/eric/vrp/vr3/vrlib"
-- "/home/eric/vrp/vr3/vrlib/lib"
-current_file: "/home/eric/vrp/vr3/vrlib/lib/IconHash.rb"
-current_line: 19
+current_file: "/home/eric/vrp/vr3/vrlib/index"
+current_line: 36
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
