--- a/examples/all_widgets/.vr_settings.yaml
+++ b/examples/all_widgets/.vr_settings.yaml
@@ -1,16 +1,18 @@
 --- !ruby/object:VR_ENV
-settings_file_version: 1
 width: 1125
 height: 688
 panel_pos: 327
 run_command_line: ruby main.rb
 open_files:
-- "/home/eric/vrp/vr3/visualruby_examples/all_widgets/main.rb"
-- "/home/eric/vrp/vr3/visualruby_examples/all_widgets/bin/AllWidgets.rb"
+- "/home/eric/vrp/vr3/examples/all_widgets/bin/AllWidgets.rb"
+- "/home/eric/vrp/vr3/examples/all_widgets/main.rb"
 open_folders:
-- "/home/eric/vrp/vr3/visualruby_examples/all_widgets"
-- "/home/eric/vrp/vr3/visualruby_examples/all_widgets/bin"
-- "/home/eric/vrp/vr3/visualruby_examples/all_widgets/bin/glade"
-current_file: "/home/eric/vrp/vr3/visualruby_examples/all_widgets/bin/AllWidgets.rb"
+- "/home/eric/vrp/vr3/examples/all_widgets"
+- "/home/eric/vrp/vr3/examples/all_widgets/bin"
+current_file: "/home/eric/vrp/vr3/examples/all_widgets/bin/AllWidgets.rb"
 rdoc_command_line: rdoc -x README
+vr_yaml_file: ".vr_settings.yaml"
+notebook_panel_position: 400
+current_line: 35
+settings_file_version: 1
 builder: !ruby/object:Gtk::Builder {}
