--- a/examples/treeview/.vr_settings.yaml
+++ b/examples/treeview/.vr_settings.yaml
@@ -1,15 +1,17 @@
 --- !ruby/object:VR_ENV
-settings_file_version: 1
 width: 984
 height: 711
 panel_pos: 491
 run_command_line: ruby main.rb
 open_files:
-- "/home/eric/vrp/vr3/visualruby_examples/treeview/bin/MyClass.rb"
-- "/home/eric/vrp/vr3/visualruby_examples/treeview/main.rb"
+- "/home/eric/vrp/vr3/examples/treeview/main.rb"
+- "/home/eric/vrp/vr3/examples/treeview/bin/MyClass.rb"
 open_folders:
-- "/home/eric/vrp/vr3/visualruby_examples/treeview"
-- "/home/eric/vrp/vr3/visualruby_examples/treeview/bin"
-- "/home/eric/vrp/vr3/visualruby_examples/treeview/bin/glade"
-current_file: "/home/eric/vrp/vr3/visualruby_examples/treeview/main.rb"
+- "/home/eric/vrp/vr3/examples/treeview"
+- "/home/eric/vrp/vr3/examples/treeview/bin"
+current_file: "/home/eric/vrp/vr3/examples/treeview/main.rb"
 rdoc_command_line: rdoc -x README
+vr_yaml_file: ".vr_settings.yaml"
+notebook_panel_position: 400
+current_line: 14
+settings_file_version: 1
