--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -1,20 +1,36 @@
 --- !ruby/object:VR_ENV
-vr_yaml_file: ".vr_settings.yaml"
 width: 1364
 height: 691
 panel_pos: 270
-notebook_panel_position: 474
 run_command_line: ruby vr
 open_files:
-- "/home/eric/vrp/vr3/vrlib/lib/IconHash.rb"
-- "/home/eric/vrp/vr3/vrlib/index"
+- "/home/eric/vrp/vr3/vrlib/lib/treeview/FileTreeView.rb"
+- "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
+- "/home/eric/vrp/vr3/bin/main/OpenProject.rb"
+- "/home/eric/vrp/vr3/bin/main/ProjectTree.rb"
+- "/home/eric/vrp/vr3/bin/main/VR_ENV.rb"
+- "/home/eric/vrp/vr3/vr.gemspec"
+- "/home/eric/vrp/vr3/examples/settings_file/bin/SavableSettings.rb"
+- "/home/eric/vrp/vr3/bin/editor/VR_Tabs.rb"
+- "/home/eric/vrp/vr3/bin/editor/VR_TextShell.rb"
+- "/home/eric/vrp/vr3/bin/main/GemTree.rb"
+- "/home/eric/vrp/vr3/bin/main/VR_File_Tree.rb"
+- "/home/eric/vrp/vr3/bin/editor/VR_Document.rb"
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/bin"
 - "/home/eric/vrp/vr3/bin/main"
+- "/home/eric/vrp/vr3/bin/tools"
+- "/home/eric/vrp/vr3/examples"
+- "/home/eric/vrp/vr3/examples/settings_file"
+- "/home/eric/vrp/vr3/examples/settings_file/bin"
 - "/home/eric/vrp/vr3/vrlib"
-current_file: "/home/eric/vrp/vr3/vrlib/index"
-current_line: 36
-rdoc_command_line: rdoc -x README
+- "/home/eric/vrp/vr3/vrlib/lib"
+- "/home/eric/vrp/vr3/vrlib/lib/treeview"
+current_file: "/home/eric/vrp/vr3/bin/editor/VR_TextShell.rb"
+rdoc_command_line: rdoc -x README -x /*.glade -x /*.yaml -x /*.gemspec -x /*.css
+vr_yaml_file: ".vr_settings.yaml"
+notebook_panel_position: 474
+current_line: 18
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
