--- a/examples/active_record2/.vr_settings.yaml
+++ b/examples/active_record2/.vr_settings.yaml
@@ -1,7 +1,7 @@
 --- !ruby/object:VR_ENV
 vr_yaml_file: ".vr_settings.yaml"
-width: 1046
-height: 718
+width: 1065
+height: 691
 panel_pos: 360
 notebook_panel_position: 400
 run_command_line: ruby main.rb
@@ -10,13 +10,14 @@ open_files:
 - "/home/eric/vrp/vr3/examples/active_record2/bin/CompanyGUI.rb"
 - "/home/eric/vrp/vr3/examples/active_record2/bin/Employer.rb"
 - "/home/eric/vrp/vr3/examples/active_record2/bin/Employee.rb"
+- "/home/eric/vrp/vr3/examples/active_record2/bin/Paycheck.rb"
 open_folders:
 - "/home/eric/vrp/vr3/examples/active_record2"
 - "/home/eric/vrp/vr3/examples/active_record2/bin"
 - "/home/eric/vrp/vr3/examples/active_record2/bin/glade"
 - "/home/eric/vrp/vr3/examples/active_record2/db"
-current_file: "/home/eric/vrp/vr3/examples/active_record2/bin/Employee.rb"
-current_line: 22
+current_file: "/home/eric/vrp/vr3/examples/active_record2/bin/CompanyGUI.rb"
+current_line: 39
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 filename: ".vr_settings.yaml"
