--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -1,20 +1,19 @@
 --- !ruby/object:VR_ENV
 width: 1261
-height: 720
+height: 691
 panel_pos: 360
 run_command_line: ruby main.rb
 open_files:
-- "/home/eric/vrp/vr3/bin/editor/VR_Document.rb"
-- "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
-- "/home/eric/vrp/vr3/vrlib/lib/treeview/FileTreeView.rb"
-- "/home/eric/vrp/vr3/vr.gemspec"
-- "/home/eric/vrp/vr3/bin/main/OpenProject.rb"
-- "/home/eric/vrp/vr3/examples/settings_file/bin/SavableSettings.rb"
-- "/home/eric/vrp/vr3/vrlib/lib/SavableClass.rb"
+- "/home/eric/vrp/vr3/vrlib/doc/VR/CellRendererCombo.html"
+- "/home/eric/vrp/vr3/vrlib/lib/Alert.rb"
 open_folders:
 - "/home/eric/vrp/vr3"
-current_file: "/home/eric/vrp/vr3/vrlib/lib/SavableClass.rb"
-rdoc_command_line: rdoc -x README
+- "/home/eric/vrp/vr3/vrlib"
+- "/home/eric/vrp/vr3/vrlib/lib"
+current_file: "/home/eric/vrp/vr3/vrlib/lib/Alert.rb"
+rdoc_command_line: yardoc
 vr_yaml_file: ".vr_settings.yaml"
 notebook_panel_position: 400
-current_line: 14
+current_line: 103
+builder: !ruby/object:Gtk::Builder {}
+top_level_window: false
