--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -1,26 +1,20 @@
 --- !ruby/object:VR_ENV
 vr_yaml_file: ".vr_settings.yaml"
-width: 1261
+width: 1524
 height: 691
 panel_pos: 360
 notebook_panel_position: 400
 run_command_line: ruby vr
 open_files:
-- "/home/eric/vrp/vr3/vrlib/lib/treeview/ListView.rb"
-- "/home/eric/vrp/vr3/bin/main/VR_Main.rb"
-- "/home/eric/vrp/vr3/vrlib/lib/Alert.rb"
-- "/home/eric/vrp/vr3/vrlib/lib/GladeGUI.rb"
-- "/home/eric/vrp/vr3/vrlib/lib/treeview/FileTreeView.rb"
 - "/home/eric/vrp/vr3/bin/main/VR_File_Tree.rb"
-- "/home/eric/vrp/vr3/vrlib/lib/treeview/ViewCommon.rb"
 open_folders:
 - "/home/eric/vrp/vr3"
+- "/home/eric/vrp/vr3/bin"
+- "/home/eric/vrp/vr3/bin/main"
 - "/home/eric/vrp/vr3/vrlib"
-- "/home/eric/vrp/vr3/vrlib/lib"
-- "/home/eric/vrp/vr3/vrlib/lib/treeview"
-- "/home/eric/vrp/vr3/vrlib/site"
-current_file: "/home/eric/vrp/vr3/vrlib/lib/treeview/FileTreeView.rb"
-current_line: 8
-rdoc_command_line: yardoc - site/*.doc
+- "/home/eric/vrp/vr3/vrlib/doc"
+current_file: "/home/eric/vrp/vr3/bin/main/VR_File_Tree.rb"
+current_line: 61
+rdoc_command_line: yardoc - site/*.md
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
